fix(front): u#2138 fix spacings on workspace items

--- a/javascript/apps/taiga/src/app/modules/workspace/feature-list/components/workspace-item/workspace-item.component.css
+++ b/javascript/apps/taiga/src/app/modules/workspace/feature-list/components/workspace-item/workspace-item.component.css
@@ -50,6 +50,7 @@ Copyright (c) 2021-present Kaleidos Ventures SL
 
 .workspace-show-all {
   margin-block-start: var(--spacing-16);
+  margin-inline-start: var(--spacing-8);
 }
 
 .workspace-item-title-active {
